Simple language changes

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -94,9 +94,9 @@ In this report I will talk about my progress and what I have learned over the pa
 \pagebreak
 
 \section{The project} \label{s:project}
-In this section I will attempt to summarise the different aspects  have seen on the project, in enough detail for the reader to understand the rest of the report, and understand the goals I am working towards.
+In this section I will attempt to summarise the different aspects I have seen on the project, in enough detail for the reader to understand the rest of the report, and understand the goals I am working towards.
 
-My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what the majority this report will be about. 
+My project is about optimising all sorts of logistical decisions regarding offshore energy sites, primarily windfarms. This includes supply chains, routing, design of the windfarm, and scheduling of the operations to be done on the windfarm. The latter is where my primary focus lies, and what the majority of this report will be about. 
 
 \subsection{Logistical decisions on offshore windfarms} \label{ss:logdec}
 A typical offshore windfarm (OWF) will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. Between these structures are many cables, connecting the WTGs to the OSPs, generally with a number of sets of WTGs connected serially. Then from each OSP there are specialized cables back to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017,barlow2018mixed}. 
@@ -112,7 +112,7 @@ The stochastic nature of the project also comes with various challenges. Naively
 \subsection{This research project} \label{ss:objs}
 The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions near the start of this life-cycle impact the situation down the line. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own.
 
-Over the past year, I have spent most of my time reading up on the subject, both the methods and the challenges of offshore projects. This literature in summed up in \Cref{s:lit}. Additionally I have been laying the groundwork for a simulator which I am planning to turn into a tool for support on the logistical decisions described previously. Details on this tool are given in \Cref{s:sim}.
+Over the past year, I have spent most of my time reading up on the subject, both the methods and the challenges of offshore projects. This literature is summed up in \Cref{s:lit}. Additionally I have been laying the groundwork for a simulator which I am planning to turn into a tool for support on the logistical decisions described previously. Details on this tool are given in \Cref{s:sim}.
 
 \bigskip
 
@@ -123,7 +123,7 @@ The explicit research objective is:
 Design an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
 \end{restatable}
 
-The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The decision that impacts all future decisions most clearly is the layout of the site, as this affects the distance and travel times between the assets during all other operations. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation projects can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommissioning project starts. Here the connection between maintenance and decommissioning may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommissioning of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommissioning policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
+The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The decision that impacts all future decisions most clearly is the layout of the site, as this affects the distance and travel times between the assets during all other operations. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation project can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommissioning project starts. Here the connection between maintenance and decommissioning may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommissioning of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommissioning policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
 
 This objective has three sub-objectives:
 
@@ -142,9 +142,9 @@ Design an integrated optimisation and simulation model for the maintenance proje
 Design an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
 \end{restatable}
 
-As each of these three sub-objectives is already a sizable goal in itself, these models will likely be based on models from the literature. For the installation projects, I already have a fairly clear view of how I want to structure this model, as will be explained later in this report. Additionally, the decommissioning model will likely be similar to the installation model, as these projects are assumed to be similar in structure. 
+As each of these three sub-objectives is already a sizable goal in itself, these models will likely be based on models from the literature. For the installation projects, I already have a fairly clear view of how I want to structure this model, as will be explained later in this report. For maintenance, I do not yet have a particular model in mind, but it is clear there are many of these models in the literature, some of which I may be able to use as a basis. Additionally, the decommissioning model will likely be similar to the installation model, as these projects are assumed to be similar in structure. 
 
-After each of the sub-objectives is complete, the models need to be integrated into one life-cycle spanning model in order to complete the primary objective. Integrating models, especially on this scale, is often very complex. This will be the main contribution of this research project. 
+After each of the sub-objectives is complete, the models need to be integrated into one life-cycle spanning model in order to complete the primary objective. Integrating models, especially on this scale, is often very complex. This will be the main contribution of this research project. These models will also be used for analysis as a secondary contribution, depening on time restrictions.
 
 \bigskip
 
@@ -294,7 +294,7 @@ Even linear and integer programming models computationally complex to solve, hen
 
 Another method has been discussed before already; robust optimisation. As with simulation, this reduces the number of considered inputs (primarily weather states, but also task duration which is sometimes stochastic) by only considering certain constructed uncertainty sets. This strongly reduces the number of situations considered in the optimisation. 
 
-There are alternatives to computational programming. The most prominent is local search. A benefit of local search is that reasonably good results can often be found fairly quick, but this is connected to the main drawback of local search; it can often be difficult to get out of local optima. However, there is a lot of literature on local search and many variants designed to reduce its drawbacks. 
+There are alternatives to computational programming. The most prominent are heuristic methods, such as local search. Heuristics are powerful when dealing with large problems like this, as finding an exact global optimimum will usually take an infeasibly long time. A benefit of local search is that reasonably good results can often be found fairly quick, but this is connected to the main drawback of local search; it can often be difficult to get out of local optima. However, there is a lot of literature on local search and other heuristics and many variants designed to reduce its drawbacks. 
 
 Alternatively, evolutionary algorithms have been used for deterministic scheduling problems such as machine learning \cite{dorndorf1995evolution}. A good explanation of this technique for scheduling is given in \cite{cotta2007memetic}. While this technique seems to be fairly common in deterministic scheduling, not much research could be found in an uncertain setting. The exception is \cite{sevaux2002genetic} as discussed in \Cref{sss:stoch}. This research, although seemingly brief, gives quality results. Since there is no clear reason why evolutionary algorithms couldn't work well within an uncertain setting, this is a potential method to explore in the future. 
 
@@ -357,7 +357,7 @@ First I will go through each of the sub-objectives, before talking about the mai
 
 \subobjone*
 
-Effectively this would come down to combining the two models inspired by the models discussed in  \Cref{sss:sched}, in which I took two focus papers and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together, and I aim to do the same. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic (as in \cite{kerkhove2017optimised}) could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve an integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving the speed of simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
+Effectively this would come down to integrating the two models discussed in \Cref{sss:sched}, in which I took two focus papers \cite{barlow2018mixed,kerkhove2017optimised} and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together, and I aim to do the same. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic  could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve an integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving the speed of simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
 
 \subobjtwo*
 
