--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -385,28 +385,25 @@ Since research is inherently exploratory and unpredictable, it is impossible to 
 
 \bigskip
 
-My immediate focus will now go to filling in my knowledge gaps regarding the maintenance projects. As stated before, some research has already been conducted, but there is significant reading of the literature to be done, which I aim to do in the upcoming months. I am planning to do the bulk of this reading in the next two months, although more reading of the literature will naturally be something I do throughout this project. Additionally I am planning to work on the simulator described in \Cref{s:sim} and getting it operational for installation projects while remaining adaptable enough to later be used in maintenance projects as well. The simulator should be operational for that within the next six months. After the bulk of the previously mentioned reading is done, I plan to start work on the optimisation model for the installation project as well, as this will be needed to make full use of the simulator. It is unlikely that I completely finish that in the next six months (as it will be combined with the other tasks described) but a sizable start should be made. 
+My immediate focus will now go to filling in my knowledge gaps regarding the maintenance projects. As stated before, some research has already been conducted, but there is significant reading of the literature to be done, which I aim to do in the upcoming months. I am planning to do the bulk of this reading in the next two months, although more reading of the literature will naturally be something I do throughout this project. After the majority of this reading is done, I plan to work on the optimisation and simulation models for installation projects, and integrate them. I will then implement them into the tool described in \Cref{s:sim}, and getting it operational for installation projects while remaining adaptable enough to later be used in maintenance and decommission projects as well. The tool should be operational for that within the next six months. During this time, I will also attempt to contact industy partners to aquire real(alistic) data. My supervisors have both worked extensively within this field so I am hopeful they will be able to help me connect to outside companies.
 
-In the six months after that, so the second half of the second year of my PhD, the simulator should be finished and the optimisation model should be coming along. Therefore I aim to focus on running the first experiments in this time frame. For that test data needs to be acquired from weather institutions and industrial companies. A start on acquiring this should be made sooner than six months, as setting up a connection with these companies might take a lot of time. The aim is to have the data available at this point, and use it for analysis. My supervisors have both worked extensively within this field so I am hopeful they will be able to help me connect to outside companies. Additionally within this time frame I hope to adapt the simulator to work with maintenance projects and design an initial model for those.
+In the six months after that, I will attempt to design the models for both maintenance and decommission projects, in a similar structure to the model made for installation projects in order to improve compatibility. If data has been aquired from industry partners, some initial experiments to validate the tool up to this point will also be performed. After the models for each individual phase are completed, I will attempt to integrate them into one life-cycle spanning model. 
 
-\bigskip
+Hopefully all of that is completed 12-14 months from now. After that, the tool needs to be adapted for the full life-cycle model. Once that is completed, full validation of the tool can be done with the aquired data, and if successful some experimental analysis can be done. The extend on this heavily depends on the amount of time available. There are many directions to go in and possible improvements to add to the tool, but some of them will likely have to be carried out in some future research project. For example, the tool might benefit from realistic imperfect weather forecasts, which are uncommon in the current literature but potentially a way to improve accuracy. Additional optimisation methods can also be implemented, so that various methods can be compared and possibly combined. Experiments with location and layout of sites could also be added in the future, whether that is this PhD project or another future project. 
 
-At the start of the third year of my PhD the models for both installation projects and maintenance projects should be well formed, and I will aim to combine them. The decommissioning projects will also be included in this overarching model, which will likely be very similar to installation projects in structure. This is likely to be difficult, even if both models are already implemented in the simulator, as integrated models have proven to be a complex subject in itself. Realistic experiments can also be performed at this time, and my goal is to adapt the models to accommodate for more extensive research into directions which are indicated to be useful by the earlier experiments. For example, if realistic imperfect weather forecasts seem like a valuable research topic, I aim to adapt the models and simulator to include them. This also includes various alternative optimisation models, as multiple alternatives should be experimented with to compare their performance over the entire life-cycle of an OWF which is now included in the model. Finally experiments with different layouts of the OWF can be performed to see their impact on the costs of installation, maintenance and decommissioning of the site. 
-
-In the final 6 months of my PhD, I will hopefully focus mostly on writing. While I plan to continually write about my progress and findings, there will always be a significant portion to write up in the end. That said, any additional experiments and final changes can also be performed and implemented during this time. 
+Finally a lot of writing on my PhD thesis will have to be done. I aim to write continuously throughout the project as it develops, using this report as a basis. However, at the end of the three years some time needs to be dedicated to finish up the writing. Ideally I will be able to complete this before the 3-year mark, but potentially the writing needs to be finished up in the few months afterwards. 
 
 \bigskip
 
 To summarise, this timeline would look like:
 
 \begin{itemize}
-	\item Year 2, first half: Read up more on maintenance projects and related research, implement the simulator for installation projects, start on the optimisation model for the installation project, put out initial efforts to gather data from companies. 
-	\item Year 2, second half: Implement maintenance projects in the simulator, run initial experiments using data gathered from companies.
-	\item Year 3, first half: Combine the models into an overarching model for the entire life-cycle, run deeper experiments and adapt the tool based on found results.
-	\item Year 3, second half: Finalise experiments, and finalise writing up the research.
+	\item Year 2, second half: Read up more on maintenance projects and related research, design models for installation, implement those models in the tool, start inital contacts to aquire data
+	\item Year 3, first half: Design models for maintenance and decommission projects, run initial simple experiments if data is available, start design on the life-cycle spanning integrated model
+	\item Year 3, second half: Finish up the design of the model and implement it fully in the tool, validate tool and run analytical experiments. Writing will be kept up to data throughout the project, but it will be finalized at this time. 
 \end{itemize}
 
-In this scenario I am able to research the entire life-cycle of an OWF and build a tool for decision support at any point in that life-cycle. But as I stated before, this is a rough timeline, and is subject to change depending on where progress is made. If very promising initial results come from the installation part of the project, there is a chance the main focus will shift there, and maintenance projects fall to a background role. Naturally the opposite might also happen. 
+In this scenario I am able to research the entire life-cycle of an OWF and build a tool for decision support at any point in that life-cycle. But as I stated before, this is a rough timeline, and is subject to change depending on where progress is made. If very promising initial results come from the installation part of the project, there is a chance the main focus will shift there, and maintenance projects fall to a background role. Naturally the opposite might also happen, or those good results may be found for the decommission projects. 
 
 Writing additional papers is not included in this timeline, as this strongly depends on where significant results are found. However I would ideally publish at least one paper on the installation model, one on the maintenance model, and one on their combination. Writing them will have a strong overlap with writing the related chapters of my thesis, so this will coincide with the continual writing I am planning to do. 
 
