--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -365,3 +365,25 @@
   year={2019},
   publisher={Elsevier}
 }
+
+@article{de2003integrating,
+  title={Integrating simulation and optimisation in health care centre management},
+  author={De Angelis, Vanda and Felici, Giovanni and Impelluso, Paolo},
+  journal={European Journal of Operational Research},
+  volume={150},
+  number={1},
+  pages={101--114},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{bard2015integrating,
+  title={Integrating optimisation and simulation approaches for daily scheduling of assembly and test operations},
+  author={Bard, Jonathan F and Jia, Shihui and Chacon, Rodolfo and Stuber, John},
+  journal={International Journal of Production Research},
+  volume={53},
+  number={9},
+  pages={2617--2632},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
