--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -259,7 +259,7 @@ Another study looking into robust scheduling is \cite{goren2008robustness}. It c
 %\cite{iancu2013pareto} \cite{dentcheva2010robust}
 As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which has roots in economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (or Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and seems to have had an impact in the literature.
 
-\subsection{Methodology} \label{ss:meth}
+\subsection{Research Methods} \label{ss:meth}
 In the above literature, two main types of methods are used for this problem; optimisation and simulation. Often both are used together, either by tackling one part of the problem with simulation and another with optimisation (as in \cite{barlow2018mixed}), or by creating schedules with an optimisation model, which are then evaluated using simulation (as in \cite{kerkhove2017optimised}). In this section the methods will be discussed in more detail, separate from the research they were used in. Other possible methods for problems of the kind we are looking at will also be discussed. 
 
 \bigskip
@@ -298,8 +298,10 @@ There are alternatives to computational programming. The most prominent are heur
 
 Alternatively, evolutionary algorithms have been used for deterministic scheduling problems such as machine learning \cite{dorndorf1995evolution}. A good explanation of this technique for scheduling is given in \cite{cotta2007memetic}. While this technique seems to be fairly common in deterministic scheduling, not much research could be found in an uncertain setting. The exception is \cite{sevaux2002genetic} as discussed in \Cref{sss:stoch}. This research, although seemingly brief, gives quality results. Since there is no clear reason why evolutionary algorithms couldn't work well within an uncertain setting, this is a potential method to explore in the future. 
 
-\subsubsection{Combining Simulation and Optimisation}
-When optimisation is to be performed within non-deterministic environments, it is often combined with simulation, such as in \cite{de2003integrating} and \cite{bard2015integrating}. A primary reason for this, and why I plan on using this too, is that simulation is a very effective way to analyse large-scale schedules subject to uncertain conditions. %TODO: Write more
+\subsubsection{Combining Simulation and Optimisation} \label{ss:simopt}
+When optimisation is to be performed within non-deterministic environments, it is often combined with simulation, such as in \cite{de2003integrating} and \cite{bard2015integrating}. A primary reason for this, and why I plan on using this too, is that simulation is a very effective way to analyse large-scale schedules subject to uncertain conditions. The optimisation and simulation model can be integrated by using the simulation to evaluate a schedule proposed by the optimisation model. This can often give more accurate results than using a simplistic objective function. The simulation model can then return an appropriate metric regarding the quality of the schedule, such as makespan or total cost, and the optimisation model can aim to improve from there. In theory this integration can even be extended; the simulation model can determine metrics relating to specific subsets of tasks, and potentially the optimisation model can use this extensive data to make more effective optimisations. For example, the set of tasks may have several types of tasks or distinct phases separated by milestone tasks. If a certain type or phase of tasks has a high ratio of delayed tasks, this might be a good part of the schedule to focus on for future changes. 
+
+The exact manner in which simulation and optimisation are combined depends on the project and individual models, but the above technique is very promising for offshore construction projects, and similar to the model used in \cite{kerkhove2017optimised}. 
 
 \pagebreak
 
@@ -356,27 +358,37 @@ First I will go through each of the sub-objectives, before talking about the mai
 
 \subobjone*
 
-Effectively this would come down to integrating the two models discussed in \Cref{sss:sched}, in which I took two focus papers \cite{barlow2018mixed,kerkhove2017optimised} and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together, and I aim to do the same. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic  could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve an integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving the speed of simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
+Effectively this would come down to integrating the two models discussed in \Cref{sss:sched}, in which I took two focus papers \cite{barlow2018mixed,kerkhove2017optimised} and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together. I aim to do the same in the manner outlined in \Cref{ss:simopt}, using simulation to evaluate schedules generated by the optimisation model. 
+
+A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic  could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve an integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving the speed of simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
 
 \subobjtwo*
 
-As mentioned in \Cref{sss:maint} significant additional reading will have to be done on this subject, and I am planning to do this in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimising asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximising overall profit. For more detail more research will need to be done first, which I will do in the upcoming months. It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
+As mentioned in \Cref{sss:maint} significant additional reading will have to be done on this subject, and I am planning to do this in the coming months (as described in \Cref{ss:timel}). Generally the typical subjects in maintenance such as supply chain management and minimising asset failure are significantly more difficult in our context, as there is a large lead up time before any emergency operations can be performed on the site. Intuitively the OSPs are the most vital to prevent failure in, as a failure in one of them can mean dozens of WTGs are no longer producing energy. Therefore I am planning on experiments with various maintenance strategies with the aim of maximising overall profit. As for methods, some form of optimisation will be combined with simulation, as I aim to do for the other phases. For more detail more research will need to be done first, which I will do in the upcoming months.  It is clear there is a relatively large amount of research on maintenance of offshore sites (as compared to a small amount of research on their installation), so any future research will have to build on that.
 
 \subobjthree*
 
-This model should be similar in structure to that created for the first sub-objective. However, the restrictions may be fairly different. Cost-effectiveness is still important, but there may be many more hard restrictions based on government regulations. These will be the restrictions to ensure the project is completed before a certain deadline, as otherwise a later start for the decommission might be more cost-effective. Therefore these projects will hold their own difficulties and are significantly different from installation projects. 
+This model should be similar in structure to that created for the first sub-objective, and the methods should therefore be similar as well. However, the restrictions may be fairly different. Cost-effectiveness is still important, but there may be many more hard restrictions based on government regulations. These will be the restrictions to ensure the project is completed before a certain deadline, as otherwise a later start for the decommission might be more cost-effective. Therefore these projects will hold their own difficulties and are significantly different from installation projects. 
 
 \objectve*
 
 After each of the sub-objectives is completed, I will aim to integrate the resulting models into one big model spanning the entire life-cycle of the OWF. The different models and their interactions are shown in Figure~\ref{f:interact}. Each of the three phases of the model has a corresponding integrated model, where the inner optimisation and simulation models work together. This interaction is effectively the same for each of the phases. On a higher level, the models for each of the phases interact with each other in specific ways. 
-
-Installation and maintenance partially overlap in time, and therefore have a significant impact on each other. The scheduling of routing and time at ports for installation and maintenance vessels may benefit from being done together, and only the assets that have been installed require maintenance. Maintenance and decommission affect each other in a very similar way, as they too overlap in time. The direct influence is that near the end of the life-cycle, it may not be cost-effiecient to maintain or repair an asset if it is to be decommissioned shortly after. Finally, installation affects decommission in more intricate ways. These phases do not overlap in time, but since the installation phase can take several years, some WTs may be years older than other WTs. This can affect maintenance, but also decommission as it may be cost-efficient to decommission the WTs that are oldest first. However, there is more that affects this, as the maintenance on each individual asset can also influence the most cost-effective order of decommissioning. 
 
 \begin{figure}[h]
 \includegraphics[width = \textwidth]{OWF Tool interactions}
 \caption{The connections between each of the minor models that together make up the final model}
 \label{f:interact}
 \end{figure}
+
+Installation and maintenance partially overlap in time, and therefore have a significant impact on each other. The scheduling of routing and time at ports for installation and maintenance vessels may benefit from being done together, and only the assets that have been installed require maintenance. Maintenance and decommission affect each other in a very similar way, as they too overlap in time. The direct influence is that near the end of the life-cycle, it may not be cost-effiecient to maintain or repair an asset if it is to be decommissioned shortly after. Finally, installation affects decommission in more intricate ways. These phases do not overlap in time, but since the installation phase can take several years, some WTs may be years older than other WTs. This can affect maintenance, but also decommission as it may be cost-efficient to decommission the WTs that are oldest first. However, there is more that affects this, as the maintenance on each individual asset can also influence the most cost-effective order of decommissioning. 
+
+\bigskip
+
+In practice there are various ways to integrate these models, and which works best will need to be explored and experimented with. In the decision support tool the simulation models should be simple to combine, effectively allowing for one big simulation. It would start simulating the installation project, and start the maintenance simulation once it reaches a certain milestone (probably the first turbines being finished). Installation would then finish up, and maintenance would continue until a certain point in time where decommission starts. How the optimisation model ties into this is not completely decided yet, and preferably the tool would have multiple options depending on the users preferences. For example a user might only want to optimise the installation schedule, but with regards to minimising life-cycle costs. Only the installation optimisation model would come into play, but all three simulation models are needed. In the tool, this is pretty straightforward, but in the theoretical models this may be more difficult to reflect. 
+
+When multiple phases need to be optimised, this could theoretically be done by directly combining the models and having one big model with decision variables and constraints related to various phases. This will likely be a very large and computationally heavy model. A more practically feasible method will likely be a back-and-forth approach where one phase is optimised, and the corresponding decision variables are used in another phase as fixed values. This can be done back-and-forth for a set number of times or until no further optimisations are found. This is similar to combining the models and having a large number of decision variables, and using column generation to split the decision variables considered into manageable sets. 
+
+In summary, the exact way this will be done is still under consideration, but there are some clear candidate approaches. 
 
 \subsection{Timeline and next steps} \label{ss:timel}
 %Timeline and focus from here
