Added Section 5 on courses

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -89,7 +89,7 @@ Over the past year, I have been researching scheduling related to offshore windf
 
 Because of this, I expected a lot of research in this area had already been conducted, but this turned out to be less the case than I would have expected. Most research is fairly recent, and there are significant literature gaps. The primary obstacle in this scheduling problem which separates it from more traditional scheduling problems is the high degree of non-deterministic factors, mainly related to the weather conditions. These projects take place on open sea, where weather can often be rougher than on land. In addition, the high-tech vessels are performing operations on large industrial constructions, hence there is a limited range of allowed wind speeds and wave heights. Something else which can further limit possible schedules is the inflexibility involved in vessel rental, since vessels of the required caliber cannot be rented on short notice, and often need to be rented for at least some minimum amount of time \cite{kerkhove2017optimised}, so adaptive in-the-moment scheduling is impossible and we cannot simply wait for an expected period of good weather based on real-time data to rent the vessels; if we expected some period to have good weather but this turns out not to be the case, we will often have the vessels rented but unusable. This means the problem has a lot of nondeterministic factors which have a large impact; factors which any good solution approach will have to take into account. 
 
-In this report I will talk about my progress and what I have learned over the past year. First, in \Cref{s:project}, I will explain the examined problem in more detail, and introduce the goals of this research project. After that, in \Cref{s:lit}, I will recount the reading I have done so far, which was the main focus of my work over the past year. This will include both research on this specific project, and research in the more general fields of (stochastic) scheduling and common methods such as optimisation and simulation. This will be the main focus of the report, as it was the main focus of my work. In addition to reading up on the state of the current research, I have also started building a Simulation tool for this problem, which I will discuss in \Cref{s:sim}. Finally, I will summarise my current standing and plans for future work in \Cref{s:concl}. 
+In this report I will talk about my progress and what I have learned over the past year. First, in \Cref{s:project}, I will explain the examined problem in more detail, and introduce the goals of this research project. After that, in \Cref{s:lit}, I will recount the reading I have done so far, which was the main focus of my work over the past year. This will include both research on this specific project, and research in the more general fields of (stochastic) scheduling and common methods such as optimisation and simulation. This will be the main focus of the report, as it was the main focus of my work. In addition to reading up on the state of the current research, I have also started building a Simulation tool for this problem, which I will discuss in \Cref{s:sim}. My other activities, such as some courses about research that I followed, are summarised in \Cref{s:otact}. Finally, I will summarise my current standing and plans for future work in \Cref{s:concl}. 
 
 \pagebreak
 
@@ -347,6 +347,27 @@ As mentioned earlier, a decision needs to be made on the presumed knowledge of t
 %TODO add references for saying the perfect forecasting is usually used in literature
 %TODO actually look up research on the forecasting
 %TODO add UML diagram of program setup and model
+
+\pagebreak
+
+\section{Other activities} \label{s:otact}
+Over the course of my PhD so far, I have also taken part in three additional courses, my experience of which I will summarise here. 
+
+\bigskip
+
+In December 2018 I took part in the Research Philosophy course at my own Strathclyde Business School. The course mainly discussed different paradigms that research can be conducted in, relating to various views whether objective truth exists, and whether one can come to know objective facts about such truths. Researcher bias was discussed at length, and how (within some views) this will affect any statement regarding truth. For example, if one conducts a survey and in any way summarises the results or aims to draw any conclusion from them, this is affected by subjective bias. While I found the course personally interesting due to a strong interest in philosophy, the subjects discussed were not very related to my PhD project. This is likely the result of my project being a Natural Science project, while the course was primarily aimed at researchers working in Social Science fields. I wrote an essay for this course, which had to relate the subjects discussed in the course to my own research, and I ended up writing about whether mathematics is a core feature of the universe, or simply a human-invented tool to describe the universe. I chose this topic as it is one of the biggest philosophical debates regarding mathematics, and if one was to take the latter position this means than any research result achieved through mathematics does not necessarily correspond to reality. Like the rest of the course, I find this topic personally interested, but it is unlikely to strongly affect my research. 
+
+\bigskip
+
+In October 2019 I took a related course discussing Research Methods. This was at the Strathclyde Business School as well, and it is supposed to be a course leading into Research Philosophy. However, due to administrative issues, I took these courses in the opposite order. As with Research Philosophy, this primarily discussed Social Science topics, as most of the methods discussed had to do with interviews and surveys, and most of the speakers had a Sociology or Psychology background. This was personally interesting as well, but even less applicable to my research than the previous course. I am yet to write an essay for this course, but as it is supposed to be about the research methods I might use in my research this essay will likely be a shortened version of \Cref{ss:meth} of this report. 
+
+\bigskip
+
+The final course I took was much more strongly related to my actual research. It was organised by NATCOR, took place in April 2019 at Lancaster University and was titled Stochastic Modelling. It discussed Management Science topics such as queuing theory, inventory control, revenue management and asset maintenance. This was a very interesting course for me, as each topic either directly relates to my research, or is close enough to use similar methods. Some case studies were also discussed by industry partners, and it brought me in contact with researchers from all over the world working on similar topics to mine. While there were no essays to be written, the topics were interesting enough for me that I strongly engaged with them that I met up with other researches on the course to discuss some of the problems discussed. 
+
+\bigskip
+
+In general these courses were good experiences for me, and while not everything was applicable for me, it put me in contact with a diverse group of researchers, working on even more diverse topics. This broadened my horizon and allowed me some new perspectives on my own topics, and larger world of academic research. There are more courses I can take in the future, both at my own University and at other locations, and I am strongly considering doing so. For example, NATCOR is organising more courses in 2020 regarding Forecasting \& Predictive Analyitcs, Convex Optimisation, and Heuristics \& Approximation Algorithms. Each of these topics seems interesting to me, and they are likely to put me in contact with more researchers from adjacent fields. 
 
 \pagebreak
 
