Added Research Objectives slide

--- a/Slides Annual Review 2019/annurev.tex
+++ b/Slides Annual Review 2019/annurev.tex
@@ -10,7 +10,7 @@
 
 \author{R. Kuipers}
 
-\date{October 10, 2019}
+\date{November 12, 2019}
 
 \begin{document}
 
@@ -36,11 +36,24 @@
 
 \begin{frame}{Key challenges}
   \begin{itemize}
-  	\item Long lead up for many decisions means no last-minute scheduling
+  	\item Long lead-up times for many decisions means no last-minute scheduling
   	\item Maritime weather conditions can be unpredictable
   	\item Looking at the whole life-cycle includes a lot of different types of decisions
   	\item Location-specific circumstances can have a big effect on weather conditions and duration of tasks
   	\item Phases are not independent, maintenance starts at the same time installation starts
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Research objectives}
+  \begin{itemize}
+  	\item Design an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
+  	\item Sub-objectives:
+  	\begin{itemize}
+  		\item Design an integrated optimisation and simulation model for the installation projects of an OWF. 
+  		\item Design an integrated optimisation and simulation model for the maintenance projects of an OWF. 
+  		\item Design an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
+  	\end{itemize}
   \end{itemize}
 \end{frame}
 
