Python base and columns

--- a/Slides Annual Review 2019/annurev.tex
+++ b/Slides Annual Review 2019/annurev.tex
@@ -4,7 +4,8 @@
 \graphicspath{ {./images/} }
 
 %\usetheme{Madrid}
-\usetheme{Warsaw}
+%\usetheme{Warsaw}
+\usetheme{Copenhagen}
 
 \title[Logistical Optimisation for Offshore Windfarms]{Simulation and Optimisation of Offshore Renewable Energy Arrays for Minimal Life-Cycle Costs}
 
@@ -77,11 +78,29 @@
 \end{frame}
 
 
-\begin{frame}{Model interactions}
+\begin{frame}{Model interactions - 1}
 \begin{figure}[t]
   \includegraphics[width=0.8\textwidth]{flowchart}
 \centering
 \end{figure}
+\end{frame}
+
+
+\begin{frame}{Model interactions - 2}
+\begin{columns}
+	\begin{column}{0.5\textwidth}
+		\begin{itemize}
+			\item TODO
+		\end{itemize}
+	\end{column}
+
+	\begin{column}{0.5\textwidth}
+		\begin{figure}[t]
+ 			\includegraphics[width=\textwidth]{Installation}
+			\centering
+		\end{figure}
+	\end{column}
+\end{columns}
 \end{frame}
 
 
